--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Contact";
 }
 <h1>@ViewData["Title"]</h1>
 
