Connect Review page to navigation bar

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Conferences/Index">Conference</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Conferences/Index">Review</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Review">Review</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Contact</a>
